tests/ui/panic-handler/panic-handler-bad-signature-2.stderr
error: argument should be `&PanicInfo`
  --> $DIR/panic-handler-bad-signature-2.rs:10:11
   |
LL |     info: &'static PanicInfo,
   |           ^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

